// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RedText RedText component renders correctly if style prop is set 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#DC0018",
        "fontFamily": "roboto_medium",
        "fontSize": 22,
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
  REDTEXT
</Text>
`;

exports[`RedText RedText renders according to snapshot 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#DC0018",
        "fontFamily": "roboto_medium",
        "fontSize": 22,
      },
      Object {},
    ]
  }
>
  FORMATTEDTEXT
</Text>
`;

exports[`RedText renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RedText
    style={
      Object {
        "fontSize": 20,
      }
    }
    text="testText"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "accessible": true,
      "allowFontScaling": true,
      "children": "TESTTEXT",
      "ellipsizeMode": "tail",
      "style": Array [
        Object {
          "color": "#DC0018",
          "fontFamily": "roboto_medium",
          "fontSize": 22,
        },
        Object {
          "fontSize": 20,
        },
      ],
    },
    "ref": null,
    "rendered": "TESTTEXT",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accessible": true,
        "allowFontScaling": true,
        "children": "TESTTEXT",
        "ellipsizeMode": "tail",
        "style": Array [
          Object {
            "color": "#DC0018",
            "fontFamily": "roboto_medium",
            "fontSize": 22,
          },
          Object {
            "fontSize": 20,
          },
        ],
      },
      "ref": null,
      "rendered": "TESTTEXT",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
